--- a/css/styles.css
+++ b/css/styles.css
@@ -3,27 +3,73 @@
     src: url("/fonts/LuckiestGuy-Regular.ttf") format("truetype");
 }
 
-
 body{
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /*background-color: #7fffd4;*/
     font-family: 'LuckiestGuy';
 }
-h1{
-    font-size: 5em;
-    position: relative;
-    animation: ;
-}
-img{
-    width: 80%;
+
+/*********************************************************************/
+
+
+
+.background{
+    display: flex;
     position: fixed;
-    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #3E1E68;
+    overflow: hidden;
+}
+
+.main-goat{
+    width: 50%;
+}
+
+.the-goat{
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    animation: goat .5s cubic-bezier(.25,.46,.45,.94);
+}
+
+img {
+    position: relative;
 }
 
 
 
-@keyframes  {
-    
+
+
+@keyframes goat {
+    0%{
+      transform: rotateY(-100deg);
+      transform-origin: right;
+      opacity: 0;
+    }
+    100%{
+      transform: rotateY(0);
+      transform-origin: right;
+      opacity: 1;
+    }
+}
+
+
+
+
+
+
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+
+
+  @keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
 }
