--- a/css/background.css
+++ b/css/background.css
@@ -1,463 +1,267 @@
-.background span {
-    width: 24vmin;
-    height: 24vmin;
-    border-radius: 24vmin;
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #3E1E68;
+    overflow: hidden;
+}
+
+.background > .boulette {
+    width: 26vmin;
+    height: 26vmin;
+    border-radius: 26vmin;
     backface-visibility: hidden;
     position: absolute;
     animation: move;
-    animation-duration: 17;
-    animation-timing-function: linear;
+    animation-duration: 45;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
+    z-index: -1;
 }
 
 
-.background span:nth-child(0) {
-    color: #fea710;
-    top: 41%;
-    left: 50%;
-    animation-duration: 236s;
-    animation-delay: -149s;
-    transform-origin: -24vw -23vh;
-    box-shadow: 48vmin 0 6.919917211465742vmin currentColor;
+.background > .boulette:nth-child(0) {
+    color: #90c5fe;
+    top: 54%;
+    left: 48%;
+    animation-duration: 40s;
+    animation-delay: -38s;
+    transform-origin: -13vw 15vh;
+    box-shadow: -52vmin 0 6.592601525133874vmin currentColor;
 }
-.background span:nth-child(1) {
-    color: #fea710;
+.background > .boulette:nth-child(1) {
+    color: #E45A84;
     top: 77%;
-    left: 32%;
-    animation-duration: 291s;
-    animation-delay: -221s;
-    transform-origin: 13vw 7vh;
-    box-shadow: 48vmin 0 6.557286926250569vmin currentColor;
+    left: 37%;
+    animation-duration: 50s;
+    animation-delay: -3s;
+    transform-origin: -9vw 7vh;
+    box-shadow: 52vmin 0 7.175273716059734vmin currentColor;
 }
-.background span:nth-child(2) {
-    color: #E45A84;
-    top: 88%;
-    left: 59%;
-    animation-duration: 12s;
-    animation-delay: -224s;
-    transform-origin: 23vw 22vh;
-    box-shadow: 48vmin 0 6.765807133261747vmin currentColor;
-}
-.background span:nth-child(3) {
-    color: #fea710;
-    top: 36%;
-    left: 52%;
-    animation-duration: 96s;
-    animation-delay: -82s;
-    transform-origin: -13vw 8vh;
-    box-shadow: 48vmin 0 6.067811549585987vmin currentColor;
-}
-.background span:nth-child(4) {
-    color: #fea710;
-    top: 56%;
-    left: 75%;
-    animation-duration: 235s;
-    animation-delay: -20s;
-    transform-origin: -20vw -23vh;
-    box-shadow: -48vmin 0 6.2792082251565695vmin currentColor;
-}
-.background span:nth-child(5) {
-    color: #7fffd4;
-    top: 33%;
-    left: 33%;
-    animation-duration: 11s;
-    animation-delay: -131s;
-    transform-origin: 21vw 1vh;
-    box-shadow: 48vmin 0 6.757724245884769vmin currentColor;
-}
-.background span:nth-child(6) {
-    color: #7fffd4;
-    top: 11%;
-    left: 31%;
-    animation-duration: 173s;
-    animation-delay: -238s;
-    transform-origin: 22vw -10vh;
-    box-shadow: 48vmin 0 6.471860034483656vmin currentColor;
-}
-.background span:nth-child(7) {
-    color: #E45A84;
-    top: 58%;
-    left: 52%;
-    animation-duration: 334s;
-    animation-delay: -196s;
-    transform-origin: 21vw 2vh;
-    box-shadow: -48vmin 0 6.064763367031643vmin currentColor;
-}
-.background span:nth-child(8) {
-    color: #7fffd4;
-    top: 53%;
-    left: 73%;
-    animation-duration: 322s;
-    animation-delay: -217s;
-    transform-origin: 2vw -24vh;
-    box-shadow: 48vmin 0 6.579985990687791vmin currentColor;
-}
-.background span:nth-child(9) {
-    color: #E45A84;
-    top: 85%;
-    left: 10%;
-    animation-duration: 304s;
-    animation-delay: -308s;
-    transform-origin: 24vw 5vh;
-    box-shadow: -48vmin 0 6.95270986757351vmin currentColor;
-}
-.background span:nth-child(10) {
-    color: #E45A84;
-    top: 93%;
-    left: 49%;
-    animation-duration: 35s;
-    animation-delay: -247s;
-    transform-origin: -6vw -10vh;
-    box-shadow: 48vmin 0 6.883777374598838vmin currentColor;
-}
-.background span:nth-child(11) {
-    color: #fea710;
-    top: 70%;
-    left: 46%;
-    animation-duration: 182s;
-    animation-delay: -240s;
-    transform-origin: 17vw 15vh;
-    box-shadow: -48vmin 0 6.0759518203186005vmin currentColor;
-}
-.background span:nth-child(12) {
-    color: #E45A84;
-    top: 71%;
-    left: 34%;
-    animation-duration: 146s;
-    animation-delay: -159s;
-    transform-origin: -20vw 15vh;
-    box-shadow: 48vmin 0 6.6074747180289535vmin currentColor;
-}
-.background span:nth-child(13) {
-    color: #E45A84;
-    top: 97%;
-    left: 65%;
-    animation-duration: 219s;
-    animation-delay: -219s;
-    transform-origin: 6vw 24vh;
-    box-shadow: 48vmin 0 6.430589444060164vmin currentColor;
-}
-.background span:nth-child(14) {
-    color: #7fffd4;
-    top: 91%;
-    left: 90%;
-    animation-duration: 63s;
-    animation-delay: -164s;
-    transform-origin: -7vw -1vh;
-    box-shadow: -48vmin 0 6.662532629507903vmin currentColor;
-}
-.background span:nth-child(15) {
-    color: #7fffd4;
-    top: 84%;
-    left: 66%;
-    animation-duration: 167s;
-    animation-delay: -41s;
-    transform-origin: -12vw -20vh;
-    box-shadow: 48vmin 0 6.055596132013859vmin currentColor;
-}
-.background span:nth-child(16) {
-    color: #7fffd4;
-    top: 99%;
-    left: 59%;
-    animation-duration: 329s;
-    animation-delay: -41s;
-    transform-origin: 7vw 11vh;
-    box-shadow: 48vmin 0 6.910415766419578vmin currentColor;
-}
-.background span:nth-child(17) {
-    color: #7fffd4;
-    top: 100%;
-    left: 61%;
-    animation-duration: 277s;
-    animation-delay: -299s;
-    transform-origin: -9vw 2vh;
-    box-shadow: 48vmin 0 6.796501526266062vmin currentColor;
-}
-.background span:nth-child(18) {
-    color: #7fffd4;
-    top: 29%;
-    left: 29%;
-    animation-duration: 257s;
-    animation-delay: -295s;
-    transform-origin: 13vw -14vh;
-    box-shadow: -48vmin 0 6.4706727927485606vmin currentColor;
-}
-.background span:nth-child(19) {
-    color: #E45A84;
-    top: 75%;
-    left: 39%;
-    animation-duration: 96s;
-    animation-delay: -61s;
-    transform-origin: -22vw -20vh;
-    box-shadow: -48vmin 0 6.336052330647414vmin currentColor;
-}
-.background span:nth-child(20) {
-    color: #7fffd4;
-    top: 97%;
-    left: 67%;
-    animation-duration: 149s;
-    animation-delay: -104s;
-    transform-origin: 13vw -6vh;
-    box-shadow: 48vmin 0 6.9078430197039875vmin currentColor;
-}
-.background span:nth-child(21) {
-    color: #7fffd4;
-    top: 18%;
-    left: 75%;
-    animation-duration: 59s;
-    animation-delay: -281s;
-    transform-origin: 19vw 11vh;
-    box-shadow: 48vmin 0 6.176442298192755vmin currentColor;
-}
-.background span:nth-child(22) {
-    color: #E45A84;
-    top: 33%;
-    left: 97%;
-    animation-duration: 126s;
-    animation-delay: -100s;
-    transform-origin: 21vw -12vh;
-    box-shadow: 48vmin 0 6.178127404854645vmin currentColor;
-}
-.background span:nth-child(23) {
-    color: #E45A84;
-    top: 72%;
-    left: 38%;
-    animation-duration: 32s;
-    animation-delay: -37s;
-    transform-origin: 6vw 8vh;
-    box-shadow: 48vmin 0 6.342602304939302vmin currentColor;
-}
-.background span:nth-child(24) {
-    color: #E45A84;
-    top: 90%;
-    left: 11%;
-    animation-duration: 72s;
-    animation-delay: -106s;
-    transform-origin: -10vw 22vh;
-    box-shadow: -48vmin 0 6.069413271116462vmin currentColor;
-}
-.background span:nth-child(25) {
-    color: #7fffd4;
-    top: 67%;
-    left: 87%;
-    animation-duration: 57s;
-    animation-delay: -192s;
-    transform-origin: -14vw 20vh;
-    box-shadow: 48vmin 0 6.254035185006123vmin currentColor;
-}
-.background span:nth-child(26) {
-    color: #fea710;
-    top: 89%;
-    left: 20%;
-    animation-duration: 315s;
-    animation-delay: -103s;
-    transform-origin: 23vw 11vh;
-    box-shadow: 48vmin 0 6.987510410305721vmin currentColor;
-}
-.background span:nth-child(27) {
-    color: #fea710;
-    top: 7%;
-    left: 70%;
-    animation-duration: 230s;
-    animation-delay: -243s;
-    transform-origin: -23vw -8vh;
-    box-shadow: 48vmin 0 6.921624385298529vmin currentColor;
-}
-.background span:nth-child(28) {
-    color: #E45A84;
-    top: 72%;
-    left: 93%;
-    animation-duration: 72s;
-    animation-delay: -291s;
-    transform-origin: -21vw 13vh;
-    box-shadow: 48vmin 0 6.3218551423284755vmin currentColor;
-}
-.background span:nth-child(29) {
-    color: #fea710;
-    top: 67%;
-    left: 87%;
-    animation-duration: 250s;
-    animation-delay: -172s;
-    transform-origin: 10vw 6vh;
-    box-shadow: 48vmin 0 6.169929398668116vmin currentColor;
-}
-.background span:nth-child(30) {
-    color: #fea710;
-    top: 94%;
-    left: 16%;
-    animation-duration: 163s;
-    animation-delay: -236s;
-    transform-origin: 7vw -1vh;
-    box-shadow: 48vmin 0 6.381093945901975vmin currentColor;
-}
-.background span:nth-child(31) {
-    color: #7fffd4;
-    top: 85%;
-    left: 4%;
-    animation-duration: 244s;
-    animation-delay: -54s;
-    transform-origin: 20vw -19vh;
-    box-shadow: 48vmin 0 6.669727246047916vmin currentColor;
-}
-.background span:nth-child(32) {
-    color: #E45A84;
-    top: 39%;
-    left: 5%;
-    animation-duration: 316s;
-    animation-delay: -6s;
-    transform-origin: -24vw 11vh;
-    box-shadow: -48vmin 0 6.658052098518199vmin currentColor;
-}
-.background span:nth-child(33) {
-    color: #7fffd4;
-    top: 80%;
-    left: 23%;
-    animation-duration: 205s;
-    animation-delay: -326s;
-    transform-origin: -10vw -9vh;
-    box-shadow: 48vmin 0 6.652867048538602vmin currentColor;
-}
-.background span:nth-child(34) {
-    color: #E45A84;
-    top: 100%;
-    left: 76%;
-    animation-duration: 22s;
-    animation-delay: -189s;
-    transform-origin: 0vw -8vh;
-    box-shadow: -48vmin 0 6.146955615772417vmin currentColor;
-}
-.background span:nth-child(35) {
-    color: #7fffd4;
-    top: 19%;
-    left: 22%;
-    animation-duration: 192s;
-    animation-delay: -134s;
-    transform-origin: -17vw -20vh;
-    box-shadow: -48vmin 0 6.996228075083645vmin currentColor;
-}
-.background span:nth-child(36) {
-    color: #7fffd4;
+.background > .boulette:nth-child(2) {
+    color: #49a0fd;
     top: 92%;
-    left: 8%;
-    animation-duration: 39s;
-    animation-delay: -188s;
-    transform-origin: 21vw 14vh;
-    box-shadow: -48vmin 0 6.779099930687301vmin currentColor;
-}
-.background span:nth-child(37) {
-    color: #E45A84;
-    top: 66%;
-    left: 56%;
-    animation-duration: 324s;
-    animation-delay: -289s;
-    transform-origin: -3vw -24vh;
-    box-shadow: 48vmin 0 6.316228881657721vmin currentColor;
-}
-.background span:nth-child(38) {
-    color: #7fffd4;
-    top: 49%;
-    left: 93%;
-    animation-duration: 215s;
-    animation-delay: -126s;
-    transform-origin: -21vw 15vh;
-    box-shadow: -48vmin 0 6.629863320477554vmin currentColor;
-}
-.background span:nth-child(39) {
-    color: #fea710;
-    top: 59%;
-    left: 51%;
-    animation-duration: 324s;
-    animation-delay: -302s;
-    transform-origin: -23vw -15vh;
-    box-shadow: -48vmin 0 6.525803772923194vmin currentColor;
-}
-.background span:nth-child(40) {
-    color: #E45A84;
-    top: 96%;
-    left: 84%;
-    animation-duration: 291s;
-    animation-delay: -101s;
-    transform-origin: -22vw -11vh;
-    box-shadow: -48vmin 0 6.880350431772602vmin currentColor;
-}
-.background span:nth-child(41) {
-    color: #fea710;
-    top: 40%;
-    left: 71%;
-    animation-duration: 170s;
-    animation-delay: -99s;
-    transform-origin: -17vw -12vh;
-    box-shadow: 48vmin 0 6.814678992043281vmin currentColor;
-}
-.background span:nth-child(42) {
-    color: #E45A84;
-    top: 61%;
-    left: 84%;
-    animation-duration: 18s;
-    animation-delay: -64s;
-    transform-origin: 15vw -8vh;
-    box-shadow: -48vmin 0 6.649946836091009vmin currentColor;
-}
-.background span:nth-child(43) {
-    color: #E45A84;
-    top: 10%;
-    left: 89%;
-    animation-duration: 299s;
-    animation-delay: -114s;
-    transform-origin: 15vw -23vh;
-    box-shadow: 48vmin 0 6.8564933634166vmin currentColor;
-}
-.background span:nth-child(44) {
-    color: #7fffd4;
-    top: 63%;
-    left: 28%;
-    animation-duration: 202s;
-    animation-delay: -56s;
-    transform-origin: 25vw 14vh;
-    box-shadow: -48vmin 0 6.588179193160536vmin currentColor;
-}
-.background span:nth-child(45) {
-    color: #fea710;
-    top: 93%;
-    left: 46%;
-    animation-duration: 320s;
-    animation-delay: -186s;
-    transform-origin: 22vw 24vh;
-    box-shadow: -48vmin 0 6.089603789278465vmin currentColor;
-}
-.background span:nth-child(46) {
-    color: #7fffd4;
-    top: 28%;
-    left: 80%;
-    animation-duration: 194s;
-    animation-delay: -243s;
-    transform-origin: 2vw -23vh;
-    box-shadow: 48vmin 0 6.32217655513047vmin currentColor;
-}
-.background span:nth-child(47) {
-    color: #fea710;
-    top: 62%;
-    left: 3%;
+    left: 30%;
     animation-duration: 8s;
-    animation-delay: -1s;
-    transform-origin: 4vw 8vh;
-    box-shadow: 48vmin 0 6.926481586627311vmin currentColor;
+    animation-delay: -25s;
+    transform-origin: 21vw 6vh;
+    box-shadow: -52vmin 0 7.005677814040142vmin currentColor;
 }
-.background span:nth-child(48) {
+.background > .boulette:nth-child(3) {
+    color: #f0b6d3;
+    top: 61%;
+    left: 12%;
+    animation-duration: 28s;
+    animation-delay: -48s;
+    transform-origin: -18vw -19vh;
+    box-shadow: -52vmin 0 6.851262492883601vmin currentColor;
+}
+.background > .boulette:nth-child(4) {
+    color: #f0b6d3;
+    top: 38%;
+    left: 28%;
+    animation-duration: 18s;
+    animation-delay: -6s;
+    transform-origin: -22vw 16vh;
+    box-shadow: -52vmin 0 7.314785012358562vmin currentColor;
+}
+.background > .boulette:nth-child(5) {
+    color: #7800ff;
+    top: 9%;
+    left: 90%;
+    animation-duration: 46s;
+    animation-delay: -43s;
+    transform-origin: 24vw 17vh;
+    box-shadow: -52vmin 0 6.767187762746312vmin currentColor;
+}
+.background > .boulette:nth-child(6) {
+    color: #f0b6d3;
+    top: 31%;
+    left: 59%;
+    animation-duration: 55s;
+    animation-delay: -22s;
+    transform-origin: 3vw -22vh;
+    box-shadow: -52vmin 0 7.368818800936739vmin currentColor;
+}
+.background > .boulette:nth-child(7) {
+    color: #E45A84;
+    top: 46%;
+    left: 94%;
+    animation-duration: 40s;
+    animation-delay: -23s;
+    transform-origin: -21vw -15vh;
+    box-shadow: 52vmin 0 7.193802779833977vmin currentColor;
+}
+.background > .boulette:nth-child(8) {
+    color: #7800ff;
+    top: 58%;
+    left: 68%;
+    animation-duration: 46s;
+    animation-delay: -5s;
+    transform-origin: -21vw 6vh;
+    box-shadow: -52vmin 0 6.775191042767845vmin currentColor;
+}
+.background > .boulette:nth-child(9) {
+    color: #E45A84;
+    top: 24%;
+    left: 40%;
+    animation-duration: 32s;
+    animation-delay: -31s;
+    transform-origin: -9vw -14vh;
+    box-shadow: 52vmin 0 6.809774185634238vmin currentColor;
+}
+.background > .boulette:nth-child(10) {
+    color: #E45A84;
+    top: 21%;
+    left: 58%;
+    animation-duration: 52s;
+    animation-delay: -22s;
+    transform-origin: 21vw -20vh;
+    box-shadow: 52vmin 0 6.754348724529446vmin currentColor;
+}
+.background > .boulette:nth-child(11) {
+    color: #49a0fd;
+    top: 14%;
+    left: 13%;
+    animation-duration: 8s;
+    animation-delay: -46s;
+    transform-origin: 9vw -11vh;
+    box-shadow: -52vmin 0 7.4989910223766vmin currentColor;
+}
+.background  > .boulette:nth-child(12) {
+    color: #f0b6d3;
+    top: 64%;
+    left: 61%;
+    animation-duration: 50s;
+    animation-delay: -30s;
+    transform-origin: 15vw -21vh;
+    box-shadow: -52vmin 0 6.938677747002278vmin currentColor;
+}
+.background > .boulette:nth-child(13) {
+    color: #FFACAC;
+    top: 27%;
+    left: 86%;
+    animation-duration: 33s;
+    animation-delay: -12s;
+    transform-origin: 18vw 11vh;
+    box-shadow: 52vmin 0 6.514575890723905vmin currentColor;
+}
+.background > .boulette:nth-child(14) {
+    color: #90c5fe;
+    top: 19%;
+    left: 9%;
+    animation-duration: 23s;
+    animation-delay: -37s;
+    transform-origin: 25vw -1vh;
+    box-shadow: -52vmin 0 7.022327545747425vmin currentColor;
+}
+.background > .boulette:nth-child(15) {
+    color: #8e2bd2;
+    top: 75%;
+    left: 78%;
+    animation-duration: 23s;
+    animation-delay: -27s;
+    transform-origin: 11vw 20vh;
+    box-shadow: 52vmin 0 6.7065182209576095vmin currentColor;
+}
+.background > .boulette:nth-child(16) {
+    color: #8e2bd2;
+    top: 19%;
+    left: 90%;
+    animation-duration: 24s;
+    animation-delay: -30s;
+    transform-origin: 14vw 1vh;
+    box-shadow: -52vmin 0 7.315760801937413vmin currentColor;
+}
+.background > .boulette:nth-child(17) {
     color: #E45A84;
     top: 86%;
-    left: 96%;
-    animation-duration: 20s;
-    animation-delay: -264s;
-    transform-origin: 4vw 25vh;
-    box-shadow: 48vmin 0 6.647779915556304vmin currentColor;
+    left: 57%;
+    animation-duration: 16s;
+    animation-delay: -42s;
+    transform-origin: -9vw 12vh;
+    box-shadow: -52vmin 0 7.473518141827208vmin currentColor;
 }
-.background span:nth-child(49) {
+.background > .boulette:nth-child(18) {
     color: #E45A84;
-    top: 71%;
-    left: 89%;
-    animation-duration: 47s;
-    animation-delay: -126s;
-    transform-origin: 19vw -11vh;
-    box-shadow: 48vmin 0 6.753363054861173vmin currentColor;
+    top: 9%;
+    left: 87%;
+    animation-duration: 39s;
+    animation-delay: -42s;
+    transform-origin: -17vw 16vh;
+    box-shadow: -52vmin 0 6.532110914824808vmin currentColor;
+}
+.background > .boulette:nth-child(19) {
+    color: #E45A84;
+    top: 24%;
+    left: 10%;
+    animation-duration: 50s;
+    animation-delay: -5s;
+    transform-origin: 10vw -20vh;
+    box-shadow: -52vmin 0 7.2194211619544815vmin currentColor;
+}
+.background > .boulette:nth-child(20) {
+    color: #49a0fd;
+    top: 96%;
+    left: 56%;
+    animation-duration: 9s;
+    animation-delay: -49s;
+    transform-origin: 16vw -15vh;
+    box-shadow: -52vmin 0 7.0130551323068655vmin currentColor;
+}
+.background > .boulette:nth-child(21) {
+    color: #7800ff;
+    top: 63%;
+    left: 51%;
+    animation-duration: 19s;
+    animation-delay: -36s;
+    transform-origin: -2vw 23vh;
+    box-shadow: 52vmin 0 7.175738592741271vmin currentColor;
+}
+.background > .boulette:nth-child(22) {
+    color: #f0b6d3;
+    top: 35%;
+    left: 28%;
+    animation-duration: 38s;
+    animation-delay: -12s;
+    transform-origin: 7vw 23vh;
+    box-shadow: 52vmin 0 7.048677307163711vmin currentColor;
+}
+.background > .boulette:nth-child(23) {
+    color: #7800ff;
+    top: 52%;
+    left: 97%;
+    animation-duration: 34s;
+    animation-delay: -18s;
+    transform-origin: -17vw -3vh;
+    box-shadow: -52vmin 0 7.2638645817607035vmin currentColor;
+}
+.background > .boulette:nth-child(24) {
+    color: #90c5fe;
+    top: 63%;
+    left: 61%;
+    animation-duration: 17s;
+    animation-delay: -46s;
+    transform-origin: 24vw -21vh;
+    box-shadow: 52vmin 0 7.151727981837644vmin currentColor;
+}
+.background > .boulette:nth-child(25) {
+    color: #f0b6d3;
+    top: 37%;
+    left: 49%;
+    animation-duration: 32s;
+    animation-delay: -13s;
+    transform-origin: -5vw 21vh;
+    box-shadow: -52vmin 0 6.625560002724398vmin currentColor;
+}
+.background > .boulette:nth-child(26) {
+    color: #49a0fd;
+    top: 44%;
+    left: 69%;
+    animation-duration: 38s;
+    animation-delay: -49s;
+    transform-origin: -19vw -10vh;
+    box-shadow: -52vmin 0 6.624786414190433vmin currentColor;
 }
