--- a/css/styles.css
+++ b/css/styles.css
@@ -8,55 +8,57 @@ body{
     font-family: 'LuckiestGuy';
 }
 
-/*********************************************************************/
+/***********************    BACKGROUND    *************************/
 
 
 
 .background{
     display: flex;
-    position: fixed;
     width: 100vw;
     height: 100vh;
     top: 0;
     left: 0;
-    background: #3E1E68;
+    background: #4700b3;
     overflow: hidden;
 }
 
-.main-goat{
+
+
+/**************************    MAIN    ****************************/
+
+
+
+.main{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.the-goat{
+.strike{
+    text-decoration: line-through;
+}
+
+
+/***********************    OCLOCKONAUT    *************************/
+
+
+
+.oclockonaut{
     width: 50%;
     display: flex;
     justify-content: end;
-    animation: goat .5s cubic-bezier(.25,.46,.45,.94);
 }
 
-img {
-    position: relative;
-}
-
-
-
-
-
-@keyframes goat {
-    0%{
-      transform: rotateY(-100deg);
-      transform-origin: right;
-      opacity: 0;
-    }
-    100%{
-      transform: rotateY(0);
-      transform-origin: right;
-      opacity: 1;
-    }
+.oclockonaut > img {
+    animation:  max-fly 3s ease forwards;
+    animation-delay: 5s;
 }
 
 
 
+/***********************    KEYFRAYMES    ************************/
 
 
 
@@ -67,9 +69,62 @@ img {
 }
 
 
+@keyframes max-fly {
+    0% {
+      -webkit-animation-timing-function: ease-in-out;
+      animation-timing-function: ease-in-out;
+    }
+    10%,
+    20%,
+    30% {
+      -webkit-transform: rotate3d(0, 0, 1, 20deg);
+      transform: rotate3d(0, 0, 1, 20deg);
+      -webkit-animation-timing-function: ease-in-out;
+      animation-timing-function: ease-in-out;
+    }
+    15%,
+    25%,
+    35% {
+      -webkit-transform: rotate3d(0, 0, 1, 25deg);
+      transform: rotate3d(0, 0, 1, 23deg);
+      -webkit-animation-timing-function: ease-in-out;
+      animation-timing-function: ease-in-out;
+      opacity: 1;
+    }
+    to {
+      -webkit-transform: translate3d(-60vw, -90vh, 0);
+      transform: translate3d(-60vw, -90vh, 0);
+      opacity: 0;
+    }
+  }
 
-  @keyframes move {
-    100% {
-        transform: translate3d(0, 0, 1px) rotate(360deg);
+@keyframes max-squeeze {
+    from {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+    }
+    30% {
+      -webkit-transform: scale3d(1.25, 0.75, 1);
+      transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      -webkit-transform: scale3d(0.75, 1.25, 1);
+      transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      -webkit-transform: scale3d(1.15, 0.85, 1);
+      transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      -webkit-transform: scale3d(0.95, 1.05, 1);
+      transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      -webkit-transform: scale3d(1.05, 0.95, 1);
+      transform: scale3d(1.05, 0.95, 1);
+    }
+    to {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
     }
 }
