--- a/frontpage/css/keyframes.css
+++ b/frontpage/css/keyframes.css
@@ -1,64 +1,4 @@
-@font-face {
-    font-family: LuckiestGuy;
-    src: url("/fonts/LuckiestGuy-Regular.ttf") format("truetype");
-}
-
-body{
-    /*background-color: #7fffd4;*/
-    font-family: 'LuckiestGuy';
-}
-
 /***********************    BACKGROUND    *************************/
-
-
-
-.background{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: #4700b3;
-    overflow: hidden;
-}
-
-
-
-/**************************    MAIN    ****************************/
-
-
-
-.main{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.strike{
-    text-decoration: line-through;
-}
-
-
-/***********************    OCLOCKONAUT    *************************/
-
-
-
-.oclockonaut{
-    width: 50%;
-    display: flex;
-    justify-content: end;
-}
-
-.oclockonaut > img {
-    animation:  max-fly 3s ease forwards;
-    animation-delay: 5s;
-}
-
-
-
-/***********************    KEYFRAYMES    ************************/
 
 
 
@@ -67,6 +7,36 @@ body{
         transform: translate3d(0, 0, 1px) rotate(360deg);
     }
 }
+
+
+
+/***********************    OCLOCK LINK    *************************/
+
+
+
+@keyframes Oclock {
+  0%{
+    color: #0ac3a7;
+  }
+  25%{
+    color: #E8998D;
+  }
+  50%{
+    color: #ACE894;
+  }
+  75%{
+    color: #FFD447;
+  }
+  100%{
+    color: #0ac3a7;
+  }
+}
+
+
+
+
+/***********************    ASTRONAUTE    *************************/
+
 
 
 @keyframes max-fly {
@@ -91,12 +61,23 @@ body{
       animation-timing-function: ease-in-out;
       opacity: 1;
     }
-    to {
-      -webkit-transform: translate3d(-60vw, -90vh, 0);
+    80% {
+        -webkit-transform: translate3d(-60vw, -90vh, 0);
       transform: translate3d(-60vw, -90vh, 0);
       opacity: 0;
+      }
+    95% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+        opacity: 0;
+     }
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
     }
   }
+
 
 @keyframes max-squeeze {
     from {
