--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,9 @@ body {
 }
 
 .home-text{
-    /* background-color: lightpink; */
     width: 50%;
     height: 100%;
+    font-style: italic;
     margin-bottom: 16rem;
     margin-left: 4rem;
     text-align: left;
@@ -85,6 +85,7 @@ body {
     margin-bottom: 2rem;
     font-size: 1.7rem;
     font-family: Urbanist-Regular;
+    font-style: italic;
     animation-name: text-floating;
     animation-duration: 8s;
     animation-iteration-count: infinite;
