--- a/css/style.css
+++ b/css/style.css
@@ -11,48 +11,35 @@
     src: url("/fonts/Hey\ Comic.ttf") format("truetype");
 }
 
-
-
-
-/****************************/
-/******** VARIABLES ********/
-/**************************/
+/******************************************************************************/
+/********************************* VARIABLES *********************************/
+/****************************************************************************/
 
 :root {
-    --section-background: rgba(255, 255, 255, 0.10);
-    --section-border: 1px solid rgba( 255, 255, 255, 0.18 );
-    --home-text-color: #ffffff;
-    --home-text-buttons-color: #656f86;
-    --home-text-buttons-background: rgba(255, 255, 255, 0.25);
-    --home-text-buttons-hover-background: #2d3d638e;
+    --navbar-mobile-background: rgba(255, 255, 255, 0.15);
+    --navbar-mobile-border: 1px solid rgba( 255, 255, 255, 0.18 );
+    --footer-mobile-background: rgba(255, 255, 255, 0.30);
+    --footer-mobile-border: 1px solid rgba( 255, 255, 255, 0.18 );
+    --navbar-link-hover: rgb(197, 228, 254);
 }
 
-
-
-
-/***********************/
-/******** BODY ********/
-/*********************/
+/*************************************************************************/
+/********************************* BODY *********************************/
+/***********************************************************************/
 
 body {
     min-height: 100vh;
     color: #fff;
-
-    
     background-image: linear-gradient(to bottom, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
-    /* background-image: linear-gradient( 112.1deg,  rgb(89, 147, 185) 11.4%, rgb(91, 111, 180) 70.2% ); */
     background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-
-
-
-/*****************************/
-/******** BACKGROUND ********/
-/***************************/
+/*******************************************************************************/
+/********************************* BACKGROUND *********************************/
+/*****************************************************************************/
 
 .container {
     height: 70vh;
@@ -98,109 +85,58 @@ img.superpose{
     animation-iteration-count: infinite;
 }
 
-
-
-
-
-
-/***********************/
-/******** MAIN ********/
-/*********************/
+/*************************************************************************/
+/********************************* MAIN *********************************/
+/***********************************************************************/
 
 #main{
+    z-index: 100;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 2rem;
 }
 
+/***************************************************************************/
+/********************************* HEADER *********************************/
+/*************************************************************************/
 
-
-
-
-/************************************/
-/******** MAIN LEFT-SECTION ********/
-/**********************************/
-
-.left-section{
+.header{
     z-index: 100;
-    width: 50%;
-    /* background-color: #656f866b; */
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-h1{
-    font-size: 5.2rem;
+
+.name-container-firstname{
+    font-size: 5rem;
     font-family: 'KGHAPPY';
     margin-bottom: 0.5rem;
     animation: title 1.5s ease 0s 1 normal forwards;
 }
-h2{
-    font-size: 1.6rem;
+.name-container-lastname{
+    font-size: 1.2rem;
     font-family: 'Urbanist-Bold';
     margin-left: 2rem;
     animation: subtitle 2.5s ease 0s 1 normal forwards;
 }
-.left-section-description{
-    /* background-color: green; */
-    padding-left: 2rem;
-    height: 7vh;
-    display: flex;
-    font-family: 'Urbanist-Light';
-}
-.left-section-description-left-container{
-    width: 40%;
-    margin: 0 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-bottom: 2rem;
-}
-h3{
-    font-size: 1.3rem;
-    text-decoration: underline;
-    font-family: 'Urbanist-Regular';
-    padding-bottom: 0.5rem;
-}
-.left-section-description-right-container{
-    margin: 0 2rem;
-    border-left: 2px solid #fff;
-    padding-left: 2rem;
-    font-size: 0.8rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    
-}
 
+/***************************************************************************/
+/********************************* NAVBAR *********************************/
+/*************************************************************************/
 
-
-
-/*************************************/
-/******** MAIN RIGHT-SECTION ********/
-/***********************************/
-
-.right-section{
-    z-index: 1000;
-    width: 50%;
-    /* background-color: #22a8866b; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 .navbar{
+    z-index: 100;
+    width: 50%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /* padding-top: 1rem;
-    padding-left: 4rem;
-    padding-right: 4rem; */
-    padding: 1rem 4rem;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 1rem;
 }
 .navbar-link-text{
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-family: 'HEYCOMIC';
 }
 .navbar-link::after{
@@ -209,25 +145,191 @@ h3{
 	width: 0;
 	height: 0.2rem;
     margin-top: 0.1rem;
-	background: rgb(197, 228, 254);
+	background: var(--navbar-link-hover);
 	transition: .4s;
 }
 .navbar-link:hover::after{
 	width: 100%;
 	transition: .4s;
 }
+
+/***************************************************************************/
+/********************************* ARTICLE *********************************/
+/**************************************************************************/
+
 article{
+    z-index: 100;
     height: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 }
-.card{
+
+/***************************************************************************/
+/********************************* FOOTER *********************************/
+/*************************************************************************/
+
+.footer{
+    z-index: 100;
+    /*background-color: green;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0rem 10rem;
+    font-family: 'Urbanist-Regular';
+    color: #fff;
+}
+.footer h3{
+    font-size: 1.3rem;
+    text-decoration: underline;
+    padding-bottom: 0.5rem;
+    font-weight: bold;
+}
+.footer-first-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.8rem;
+    text-align: center;
+    padding: 0.3rem;
+    margin-bottom: 0.7rem;
+}
+.footer-second-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 0.8rem;
+    text-align: center;
+    padding: 0.3rem;
+}
+
+/*********************************************************************************/
+/***************************** @RESPONSIVE TABLETTE *****************************/
+/*******************************************************************************/
+
+@media screen and (min-width: 768px) and (max-width: 1439px){
+    #arriere-plan, #deuxieme-plan, #premier-plan, #gros-nuage, #moyen-nuage, #piti-nuage{
+        display: none;
+    }
+    .header{
+        flex-direction: column;
+    }
+    .name-container-firstname{
+        font-size: 4rem;
+    }
+    .name-container-lastname{
+        font-size: 1rem;
+        margin-left: 1rem;
+    }
+    .navbar{
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .navbar p{
+        background-color: var(--navbar-mobile-background);
+        border: 1px solid var(--navbar-mobile-border);
+        border-radius: 10px;
+        padding: 0.3rem 0.4rem;
+        font-size: 1rem;
+    }
+    .footer{
+        margin: 0;
+    }
+    .footer h3{
+        color: #5b93f3;
+    }
+    .footer p{
+        margin: 0.3rem 0rem;
+    }
+    .footer-first-section{
+        width: 45%;
+        height: 7rem;
+        justify-content: space-evenly;
+        background-color: var(--footer-mobile-background);
+        border: var(--footer-mobile-border);
+        backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        color:#467bd6;
+    }
+    .footer-second-section{
+        width: 50%;
+        height: 7rem;
+        background-color: var(--footer-mobile-background);
+        border: var(--footer-mobile-border);
+        backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        color: #558ef1;
+    }
+}
+
+/*******************************************************************************/
+/***************************** @RESPONSIVE MOBILE *****************************/
+/*****************************************************************************/
+
+@media screen and (max-width: 767px){
+    #arriere-plan, #deuxieme-plan, #premier-plan, #gros-nuage, #moyen-nuage, #piti-nuage{
+        display: none;
+    }
+    .header{
+        flex-direction: column;
+    }
+    .name-container-firstname{
+        font-size: 2.5rem;
+    }
+    .name-container-lastname{
+        font-size: 1rem;
+        margin-left: 1rem;
+    }
+    .navbar{
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .navbar p{
+        background-color: var(--navbar-mobile-background);
+        border: 1px solid var(--navbar-mobile-border);
+        border-radius: 10px;
+        padding: 0.3rem 0.4rem;
+        font-size: 1rem;
+    }
+    .footer{
+        flex-direction: column;
+        margin: 0;
+    }
+    .footer h3{
+        color: #5b93f3;
+    }
+    .footer p{
+        margin-bottom: 0.3rem;
+    }
+    .footer-first-section{
+        background-color: var(--footer-mobile-background);
+        border: var(--footer-mobile-border);
+        backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        color:#467bd6;
+    }
+    .footer-second-section{
+        margin: 0.2rem 0rem;
+        background-color: var(--footer-mobile-background);
+        border: var(--footer-mobile-border);
+        backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        color: #558ef1;
+    }
+}
+
+
+
+
+/* .card{
     height: 85%;
     width: 30%;
     border-radius: 15px;
-    /* border: 2px solid var(--section-border); */
     -webkit-box-shadow: 5px 5px 15px 5px rgba(255, 255, 255, 0.25); 
     box-shadow: 5px 5px 15px 5px rgba(255, 255, 255, 0.25);
 }
@@ -238,6 +340,7 @@ article{
     border-radius: 15px;
     filter: saturate(1.3);
 }
+
 .link{
     height: 3%;
     display: flex;
@@ -246,6 +349,4 @@ article{
 .link img{
     margin: 0 0.5rem;
     filter: saturate(0);
-}
-
-
+} */
